--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/abstract.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/abstract.tex
@@ -1,8 +1,14 @@
 %   Filename    : abstract.tex 
 \begin{abstract}
-Incidents of people going missing is an ongoing problem in the country. Although missing persons cases typically occur after natural or man-made disasters, estimates and reports indicate that a sizable number of missing persons instances still happen outside of these settings with children and elderly people with cognitive disabilities being the most at-risk. Although the Philippine National Police (PNP) has created measures to address this problem, the reporting system established has not leveraged the use of technology to streamline the process.
-\\\\This research aims to address these issues by developing an application that streamlines the missing persons case reporting and verification process, enables and encourages community-based missing persons search efforts, and allows users to track loved ones who are at risk of going missing. The application, ``HanApp'', will be developed using Flutter Framework for cross-platform compatibility, and shall utilize GPS technology, Google Maps Platform APIs, and Firebase serverless framework to achieve these features.
-\\\\Preliminary results based on extensive review of related studies, applications, and documentations support the feasibility of developing the proposed framework and features of HanApp using the aforementioned technologies.
+
+Incidents of people going missing is an ongoing problem in the country. Although missing persons cases typically occur after natural or man-made disasters, estimates and reports indicate that a sizable number of Missing Persons instances still happen outside of these settings. The Philippine National Police (PNP) has developed measures to address this issue, however the established reporting system has neither taken advantage of recent technology to streamline the process nor leveraged a community-based approach to improve the search efforts.
+
+This research aims to address both the main issue of missing persons in the country and the need to improve the reporting system by developing an application suite that: streamlines the missing persons case reporting, management, and verification process, and enables community-based search efforts.
+
+The application suite, “HanApp”, which is comprised of two application interfaces (the main user application and the PNP application) is developed using Flutter Framework for cross-platform compatibility, and utilizes Flutter development packages, Google Location Services, Google Maps Platform APIs, and Firebase serverless framework, database, and storage to achieve these features. 
+
+Results show that the main user application enables users to sign up for an account, report missing persons cases, receive updates on the status of their submitted reports, as well as get notified and view PNP-verified missing persons cases in their vicinity. Additionally, the PNP application enables PNP accounts to receive, manage, and verify missing persons cases that occur within their station’s area of jurisdiction.
+
 
 \begin{flushleft}
 \begin{tabular}{lp{4.25in}}
