minor changes on written report

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_3.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_3.tex
@@ -68,7 +68,7 @@ As Firebase has a variety of products and services that it provides, such as Fir
 Google Firebase is the sole and primary backend of the application suite. User authentication, database and data storage, and usage monitoring were all done under Firebase. Since Firebase is a serverless framework, utilizing Firebase as the application suite's backend allowed for development and testing without the use of a dedicated server infrastructure. 
 
 \subsubsection{Google Maps}
-Google Maps, one of the world’s most influential applications \cite{mehta2019google}, provides multiple location services needed in the proposed application. This includes the pinging of the location of the user of the companion app, or perhaps even the pinpointing and updating of the location where a verified missing person was last seen.
+Google Maps, one of the world’s most influential applications \cite{mehta2019google}, provides multiple location services needed in the proposed application. This includes choosing the last seen location of the missing person being reported, or by integrating the maps view onto the application menu, where, users can see the location of the verified missing persons reports. 
 
 \subsection{Hardware}
 \subsubsection{Android Phone}
