updated chapt3 and 4
 adding UI/UX design reqs and results

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_3.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_3.tex
@@ -198,3 +198,28 @@ Users in a certain radius of the PNP-verified MP case  should receive notificati
     \caption{Diagram for PNP-Verified Reports Access and Notification System}
     \label{fig:diagramLocation}
 \end{figure}
+
+\subsection{UI/UX Design Requirements}
+
+As an application suite which is used in an emergency services and crisis context, HanApp's user interface and user experience (UI/UX) should have ease of use and accessibility as a priority. As such, listed below are the UI/UX  design requirements for the application suite.
+
+\subsubsection{Application Icon Design}
+
+HanApp's Icon design should be distinct, meaningful, and cohesive with the application suite's UI/UX design and color theme. It should give the users the impression that the application is about making reporting and dissemination of missing persons cases.
+
+\subsubsection{User Interface Design}
+
+\textbf{Colors.}The colors used in the application should prioritize accessibility and simplicity while still providing a cohesive and pleasing aesthetic. More importantly, colors should be of high contrast in order to make the application more accessible to those with color blindness.
+
+\textbf{Text Font.} The chosen font family for the application suite should be legible and adequately-sized for readability. The text font choice should ensure that even those with mild visual impairment may still use the app.
+
+\textbf{In-App Icons.} The icons to be used in the application should be obvious, commonly-used, and/or easy to understand.
+
+\textbf{Layout and Spacing.} The layout of text form fields, buttons, and other visual elements should have appropriate sizes and spacing in order to minimize any user errors or confusion, and prevent the application pages from looking cramped.  
+
+\textbf{User Experience Design}
+
+\subsubsection{Application Language.} The language to be used in the application suite is English. Although the scope of operations for the application suite is the Philippines, English is the widely used language for education and business in the country and is a neutral language that allows the application to be accessible to most users. Moreover, the language used in the PNP's forms for filing and processing missing persons cases are also in English. More importantly, the language used in the application should be simple and straightforward in order to cater to more users regardless of educational background or cognitive abilities.
+
+\subsubsection{Report Form Design and Validation}
+The report forms are a major part of the application, and it is imperative that the forms are  straightforward and intuitive. As such, there should be careful and deliberate planning on the use of radio buttons, checkboxes, date pickers, text form fields, and other user input elements to ensure that filling of reports is not only easier but also minimizes user input error. Lastly, there should be validation checks to ensure that all information required by the PNP are provided completely and correctly by the reportee.
