--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_4.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_4.tex
@@ -138,6 +138,7 @@ The Report page is one of the integral parts of this application that would allo
         \label{fig:p1}
     \end{minipage}
 \end{figure}
+
 \subsubsection{Report Page 1: Classifiers}
 
 On the first page of the reports section as seen in figure \ref{fig:p1}, the categorization of the missing person being reported is located. The reporting user will be met with checkboxes indicating that their person being reported is (1) a person missing due to natural calamities, (2) a person under the age of 18, and is therefore classified as a minor, (3) a person that has been missing for over 24 hours already, or lastly, (4) a person that is a victim of a crime such as, but not limited to, kidnapping, human trafficking, etc.
@@ -324,6 +325,33 @@ Figure \ref{fig:userReportStatus} demonstrates how the user can visibly see the 
     \caption{Updates Page with Status of Report}
     \label{fig:userReportStatus}
 \end{figure}
+
+\section{UI/UX Design Implementation}
+
+\subsection{Application Suite Logo}
+
+The HanApp logo, as seen in Figure \ref{fig:hanappLogo}, is an indigo-colored logo of two horizontally-oriented hands whose thumbs meet in between and form an "eye", and with the fingers forming "speed lines". The two hands in the logo have various meanings: (1) connecting the PNP and the reporter, (2) connecting the reporter to the general community, and (3) the missing person reuniting with the reporter, whereas the eye in the middle imply that the application is about looking for missing persons. Moreover, the "speed lines" formed by the fingers help imply that the application makes the process of reporting, verifying, disseminating, and resolving missing persons cases faster. 
+
+As such, HanApp logo meets the application logo requirement such that it is distinct, meaningful, and cohesive with the HanApp's UI/UX design and color theme.
+\begin{figure}[!h]
+    \centering
+    \begin{minipage}[c]{0.50\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/hanappLogo.png}
+        \caption{Report Form Page 1}
+        \label{fig:hanappLogo}
+    \end{minipage}
+\end{figure}
+
+\subsection{UI/UX Design}
+
+As shown in the preceding sections, the UI/UX design of the application suite were able to meet the UI/UX Design requirements listed in the previous chapter, namely:
+
+\begin{enumerate}
+    \item The application's frontend design ensures accessibility and ease of use in its choice of font size and family, layout, and colors.
+    \item The English language is utilized throughout the entire application with no grammatical errors and with the use of simple and straightforward wordings.
+    \item The report form pages were simplified and incorporated the use of checkboxes, radio buttons, buttons for save/upload prompts, and text fields as well as validators, ensuring not only ease of use but also the completeness and correctness in the submitted reports. 
+\end{enumerate}
 
 \section{Backend Framework - Firebase}
 
