--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
@@ -1,70 +1,49 @@
-%  Filename   : preamble.tex
-%  Description: Preamble file to :
-%               a. specify related packages
-%               b. set margins, commands, etc.
-%\documentclass[12pt,titlepage,onepage, letterpaper]{article}
-\documentclass[12pt,titlepage,onepage, letterpaper]{report}
-%
-%-- specify related packages
-% \usepackage[utf8x]{inputenc}
-\usepackage{pdfpages}
-\usepackage{apacite}         %-- APA style citation  http://www.ctan.org/tex-archive/biblio/bibtex/contrib/apacite/
-\usepackage{amsmath}       % American Math Society packages
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{graphicx}      %needed for including figures in JPG or PNG format
- \usepackage{verbatim}     % tmultiple lines of comments
-                               %-- example:
-                               %   \begin{comment}
-                               %        ...your text here...
-                               %   \end{comment}  
-\usepackage{color}  %-- allows use of color with text
-                               %-- example:  \textcolor{red}{This is the colored text in red.}
-\usepackage{url}  %-- allows use of URLs example: \url{https:\ccs1.dlsu.edu.ph}
+%   Filename    : main.tex
+%   Description : This is the main file for the LaTeX thesis proposal document template.
+\include{preamble}      
+\graphicspath{{figures/}}  %figures is the name of the folder containing images JPG or PNG
+\usepackage{caption}
+\usepackage{subcaption}
+\usepackage{indentfirst} %indents first paragraphs, will not work since
+\setlength{\parindent}{0pt} %this is here.
+\usepackage{setspace}
+\setstretch{1.15}
+\begin{document}
+\include{title_page}      %includes LaTeX source file for the Title Page 
+
+\pagenumbering{roman}   %number pages as i, ii, iii, etc...
+\setcounter{page}{2}
+\include{approval}
+\include{declaration}
+\include{dedication}
+\include{acknowledgment}
+\include{abstract}        %includes the the Abstract page
+\tableofcontents                  %generate the Table of Contents
+\newpage
+\listoffigures                    %generate List of Figures
+\newpage                       
+%\listoftables                     %generate List of Tables
+\newpage
+\pagenumbering{arabic}            %number pages as 1, 2, 3, etc...
+\setcounter{page}{1}              
+\include{chapter_1}               %LaTeX source file for Chapter 1: Introduction
+\include{chapter_2}               %LaTeX source file for Chapter 2: Review of Related Literature
+\include{chapter_3}               %LaTeX source file for Chapter 3: Methodology
+\include{chapter_4}               %LaTeX source file for Chapter 4: Results and Discussions
+\include{chapter_5}                %Chapter 5: conclusion and recommendations
+\include{chapter_6}             %Chapter 6: references
 
 
-%
-%-- set margins,  you may need to edit this for your own printer
-%
-\topmargin 0.0in
-\oddsidemargin 0.0in
-\evensidemargin 0.0in
 
-\voffset 0.0in
-\hoffset 0.5625in
+% removed appendix, no content
+%\appendix                         %specify appendices
+%\include{appendix_A}              %LaTeX source file for Appendix A
+%\include{appendix_B}              %LaTeX source file for Appendix B
 
-\textwidth 5.75in
-\textheight 8.5in
+%\bibliographystyle{apacite}       %-- specified APA style for bibliograpy
+                                				% www.ctan.org/tex-archive/biblio/bibtex/contrib/apacite/
+ 				                                 %-- bibliographic entries are handled via bibtex; refer to www.bibtex.org for more details
+%\bibliography{myreferences}       
 
+\end{document}
 
-\parskip 1em
-\parindent 0.25in
-
-\bibliographystyle{apacite}            %-- use APA citation scheme
-\hyphenation{ana-lysis know-ledge}     %-- LaTeX may not hyphenate correctly some words you use in your document
-                                       %-- use \hyphenation to instruct LaTeX how to do it correctly, example above
-\newcommand{\degree}{^{\circ}}         %-- use \newcommand to create your own "commands"
-\newcommand{\etal}{et al.}
-\newcommand{\figref}[1]{Figure \ref{#1}}
-\newcommand{\appref}[1]{Appendix \ref{#1}}
-
-%\newcommand{\Section}[1]{\section{#1}\setcounter{figure}{0}\setcounter{table}{0}}
-
-%\newcommand{\shade}{\multicolumn{1}{|>{\columncolor[gray]{0.25}}c|}{}}
-%\newcommand{\tableheader}[1]{\rowcolor{black}\color{white}{#1}}
-%\newcommand{\cell}[2]{\multicolumn{1}{#1}{#2}}
-%\newcommand{\definition}[2]{\textbf{\textit{#1}} --- #2}
-%\newcommand{\itembit}[1]{\item \textbf{\textit{#1}}}
-%\newcommand{\sgdef}[2]{\parbox[t][][t]{1.75in}{\textbf{#1}} \> \parbox[t][][t]{4.0in}{#2}\\\\}
-
-%\newenvironment{sinagglossary}{\begin{flushleft}
-%\begin{tabbing}
-%\hspace{1.75in}\=\\}{\end{tabbing}\end{flushleft}}
-
-\newcommand{\thestitle}[1]{{\Large \textsc{#1}}}
-
-
-%---
-%  \renewcommand{\thefigure}{\thesection.\arabic{figure}}
-%  \renewcommand{\thetable}{\thesection.\arabic{table}}
-%  \renewcommand{\contentsname}{Table of Contents}
