updated final draft based on dimzon-patch-2

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
@@ -4,7 +4,7 @@
 
 \section{Overview of the Current State of Technology}
 \label{sec:overview}
-As defined by the International Commission on missing person, subjectively, anyone who is being sought by at least another person and whose location or whereabouts are unknown can be classified as a missing person \cite{icmpMissing}. However, each country has their own standard or policies for legally defining a "missing" person, and as such, accurate statistics on the average rate of missing persons globally are harder to discern. This, together with the unconfirmed number of the unreported cases of missing persons, people who voluntarily go missing, or even victims of disasters and conflict, brings to light how obscure and challenging a search for a missing person can be.
+As defined by the International Commission on Missing Persons (ICMP), subjectively, anyone who is being sought by at least another person and whose location or whereabouts are unknown can be classified as a missing person \cite{icmpMissing}. However, each country has their own standard or policies for legally defining a "missing" person, and as such, accurate statistics on the average rate of missing persons globally are harder to discern. This, together with the unconfirmed number of the unreported cases of missing persons, people who voluntarily go missing, or even victims of disasters and conflict, brings to light how obscure and challenging a search for a missing person can be.
 
 With this, there have been efforts globally to implement technologies and systems for organizing and solving this problem. The AMBER (America's Missing Broadcast Emergency Response) alert system, while not a standalone application, is a system that geo-locates and uses various forms of effective media such as smartphones, television, or radio to disseminate information about missing or abducted children in the United States in order to elicit citizen tips and responses in order to expedite the rescue of the said missing and/or abducted children \cite{griffin2007preliminary}.
 
@@ -39,20 +39,20 @@ The general objective of this study is to develop an application suite with mobi
 \subsection{Specific Objectives}
 \label{sec:specificobjectives}
 
-This study specifically seeks:
+This study specifically seeks to:
 
 \begin{enumerate}
-   \item To develop an application that would allow users to easily report missing persons to the PNP and receive updates on such reports, as well as a PNP counterpart application that will enable the PNP to quickly receive, verify, manage, and respond to reports.
-   \item To integrate a serverless database system which securely stores and manages User and PNP accounts, login authorizations, and reports without the need for a server infrastructure or dependence on local data storage, allowing the application suite to be used in any operating-system compatible device.
-   \item To integrate geolocation services that allow for report routing so that reports are received and managed by the corresponding PNP account of the case’s jurisdiction. 
-   \item To implement location-based notifications so that users can receive alerts and view information about missing persons near their current location so they can assist in the search, thus promoting a community-based approach in resolving missing persons cases.
+   \item Develop an application that would allow users to easily report missing persons to the PNP and receive updates on such reports, as well as a PNP counterpart application that will enable the PNP to quickly receive, verify, manage, and respond to reports.
+   \item Integrate a serverless database system which securely stores and manages User and PNP accounts, login authorizations, and reports without the need for a server infrastructure or dependence on local data storage, allowing the application suite to be used in any operating-system compatible device.
+   \item Implement geolocation services that allow for report routing so that reports are received and managed by the corresponding PNP account of the case’s jurisdiction. 
+   \item Implement location-based notifications so that users can receive alerts and view information about missing persons near their current location so they can assist in the search, thus promoting a community-based approach in resolving missing persons cases.
 \end{enumerate}
 
 \section{Definition of Terms and Acronyms}
 
 \textbf{Child} - refers to any person under the age of 18.
 
-\textbf{Absent Person} - according to the PNP guidelines, absent persons are defined as those who are not in their domicile or place where they are supposed to be present in less than 24 hours, and whose families/relatives/significant others have no clue as to their whereabouts but there is no apparent risk and do not require police investigation.
+\textbf{Absent Person} - according to the PNP guidelines, absent persons are defined as those who are not in their domicile or place where they are supposed to be present in less than 24 hours, and whose families, relatives, or significant others have no clue as to their whereabouts but there is no apparent risk and do not require police investigation.
 
 \textbf{Absent/Missing Person (\textbf{A/MP}) }- in accordance with the PNP guidelines and the affixed checklist when receiving and processing missing person cases, the term (A/MP) can refer to the reported person whose whereabouts is unknown and whose classification as Absent or Missing is not yet finalized.
 
