--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_2.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_2.tex
@@ -12,7 +12,7 @@ One key difference with this application compared to HanApp, however, is that th
 
 \section{Mobile Applications for Alerting the Community Regarding Missing Persons}
 
-A mobile alert application determined to engage community volunteers to help in locating missing persons with dementia called the “Community ASAP system” was developed and documented in a paper by Neubauer, N., Daum, C., Miguel-Cruz, A., and Liu, L.. The findings of the study’s simulation of the Community ASAP system highlighted the importance of police services in these cases on account of their primary and direct involvement, and the effectiveness of community response and participation to the occurrence of missing persons with dementia. The approach also proves to be viable even for people who have no social media which is popular for being an accessible medium to disseminate information regarding missing persons \cite{neubauer2021mobile}.
+A mobile alert application determined to engage community volunteers to help in locating missing persons with dementia called the “Community ASAP system” was developed and documented in a paper by Neubauer, et. al. (2021). The findings of the study’s simulation of the Community ASAP system highlighted the importance of police services in these cases on account of their primary and direct involvement, and the effectiveness of community response and participation to the occurrence of missing persons with dementia. The approach also proves to be viable even for people who have no social media which is popular for being an accessible medium to disseminate information regarding missing persons \cite{neubauer2021mobile}.
 
 “CoSMiC”, a mobile application designed to crowdsource information about lost and missing children in situ is another approach towards applying techniques and technologies in locating missing persons. The main concern that the CoSMiC mobile application prioritizes to solve is with regards to the urgency and criticality that ensues whenever a child goes missing within a neighborhood. The application aims to digitize crowdsourcing for finding missing children through a landmark-based location history of the lost child that was chronologically and locationally procured within the network of crowdsourced information \cite{shin2014cosmic}.
 
