--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
@@ -34,6 +34,8 @@
 \include{chapter_6}             %Chapter 6: references
 
 
+
+% removed appendix, no content
 \appendix                         %specify appendices
 \include{appendix_A}              %LaTeX source file for Appendix A
 \include{appendix_B}              %LaTeX source file for Appendix B
