--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/abstract.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/abstract.tex
@@ -1,13 +1,12 @@
 %   Filename    : abstract.tex 
 \begin{abstract}
-
     Missing persons cases remain a persistent problem in the Philippines. Although these cases typically occur after natural or man-made disasters, estimates indicate a significant number of missing persons cases outside these settings. While the Philippine National Police (PNP) has developed measures to address this issue, the current system has not taken advantage of recent technology nor leveraged or enabled community-based efforts.
     
     To address these shortcomings, the research developed “HanApp”, an application that streamlines the missing persons case reporting, management, and verification process, and enables community-based search efforts
     
     The suite comprises two application interfaces developed using Flutter Framework for cross-platform compatibility, and utilizes Flutter development packages, Google Location Services, Google Maps Platform APIs, and Firebase serverless framework, database, and storage to achieve these features. 
     
-    Results show that the main user application enables users to sign up for an account, report missing persons cases, receive updates on the status of their submitted reports, as well as get notified and view PNP-verified missing persons cases in their vicinity. Additionally, the PNP application enables PNP accounts to receive, manage, and verify missing persons cases that occur within their station’s area of jurisdiction.
+    The main user application enables users to sign up for an account, report missing persons cases, receive updates on the status of their submitted reports, as well as get notified and view PNP-verified missing persons cases in their vicinity. Additionally, the PNP application enables PNP accounts to receive, manage, and verify missing persons cases that occur within their station’s area of jurisdiction.
     
     
     \begin{flushleft}
